crates/swc_ecma_parser/tests/jsx/errors/issue-3523/input.js
var rest, b;

for ({...rest, b} of [{}
]) ;